--- a/ShopeeProject/requirements.txt
+++ b/ShopeeProject/requirements.txt
@@ -1,4 +1,8 @@
 beautifulsoup4==4.7.1
+boto==2.49.0
+boto3==1.9.151
+botocore==1.12.151
+Brotli==1.0.7
 certifi==2019.3.9
 chardet==3.0.4
 cycler==0.10.0
@@ -7,9 +11,14 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.2.1
 django-allauth==0.39.1
+django-heroku==0.3.1
 django-mailgun==0.9.1
+django-storages==1.7.1
+django-storages-redux==1.3.3
+docutils==0.14
 gunicorn==19.9.0
 idna==2.8
+jmespath==0.9.4
 kiwisolver==1.1.0
 matplotlib==3.0.3
 mysqlclient==1.4.2.post1
@@ -22,8 +31,10 @@ python3-openid==3.1.0
 pytz==2019.1
 requests==2.21.0
 requests-oauthlib==1.2.0
+s3transfer==0.2.0
 six==1.12.0
 soupsieve==1.9.1
 sqlparse==0.3.0
 static3==0.7.0
 urllib3==1.24.3
+whitenoise==4.1.2
